--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.8 M
 
+2018-8-25 Will
+* Identified engines and kit mode in CLI prompt.
+* All CLI kit mode controls active.
+
 2018-8-24 Will
 * Temporary fix to banks selection anomally
   The whole of bank needs review.
