Improved CLI fault and context sensitivity

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.8 M
 
+2018-8-27 Will
+* Improved CLI fault and context sensitivity.
+
 2018-8-26 Will
 * More refinments to CLI command structure.
 * Added common stereo, octave, detunes.
