--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.8 M
 
+2018-8-30 Will
+* Added common envelope controls to CLI.
+  Not freemode yet.
+* Updated help lists.
+
 2018-8-29 Will
 * Made CLI help lists more consistent.
 * Added CLI overtones entries for sub and pad.
