--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -13,7 +13,9 @@ BUG! Multi instances produce jack errors if have been opened when main instance 
 
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well, or better still loop back to try alsa.
 
-Set envelope limits error for invalid controls.
+BUG! Occasional segfault when starting new instance goes back to V 1.5.8.2 at least.
+
+Maybe BUG crash when loading files from banks - cured by clearing an recreating config files.
 
 Sort out bank properly.
 
