--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.8 M
 
+2018-9-6 Will
+* Bugfix: Occasional segfaults starting new instances.
+  Caused by call crossing threads :(
+
 2018-9-5 Will
 * BugFix: Reverb type not updating bandwidth control.
   Thanks to Jesper for finding the cause.
