Found and mitigated cause of major memory leak Startup now counts banks and instruments seen

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.8 M
 
+2018-9-7 Will
+* Found and mitigated cause of major memory leak.
+  In XML - needs more work to resolve completely.
+* Startup now counts banks and instruments seen.
+
 2018-9-6 Will
 * Bugfix: Occasional segfaults starting new instances.
   Caused by call crossing threads :(
