--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.8 M
 2018-9-8 Will
 * Added CLI placeholders for LFOs and filters.
 * Completed CLI controls for LFOs.
+* CLI filters done except formant editor.
 
 2018-9-7 Will
 * Found and mitigated cause of major memory leak.
