Further refinements to CLI controls and messages CLI LFO & Envelope enables inplemented

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.5.8 M
 2018-9-9 Will
 * Optimised some CLI selection routines.
 * Improved CLI prompt information.
+* Further refinements to CLI controls and messages.
+* CLI LFO & Envelope enables inplemented.
 
 2018-9-8 Will
 * Added CLI placeholders for LFOs and filters.
