--- a/Changelog
+++ b/Changelog
@@ -8,6 +8,7 @@ yoshimi 1.5.8 M
 * Simplifed ON/OFF controls in CLI lists.
   Can still actually use any of:
   ENable, ON, YEs or DIsable, OFf, NO
+* Corrected wrong CLI kitmode help entry.
 
 2018-9-8 Will
 * Added CLI placeholders for LFOs and filters.
