--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,5 +1,5 @@
 
-BUG! Multi instances produce jack errors if have been opened when main instance closed - been there since V 1.4.1 :(
+BUG! Multi instances produce jack errors when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well, or better still loop back to try alsa.
 
