--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,8 @@ yoshimi 1.5.9 M
 * BugFix: AddSynth FM mod was cogging notes.
   Only that mod and at notes close to sample rate.
 * Improved note/mod oscillator frequency calculations.
+* Reinstated a more advanced version of F2I.
+  Some misinformation earlier :(
 
 2018-9-27 Will
 * Accepted typo checks from debian.
