--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.5.9 M
 2018-10-12 Will
 * Converted remaining truncf calls to FR2Z2I.
   Behaviour is now entirely consistent.
+* Temporarily disabled assembler FR2Z2I code.
+  It screws up in LV2 :(
 
 2018-10-2 Will
 * Changed F2I to FR2Z2I to clarify behaviour.
