--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -15,7 +15,7 @@ Find out why reporting errors in 'Bank' is very slow.
 
 Realtime subnote
 
-Zero-cross for note off.
+Realtime filters
 
 Add 'Lock AddSynth Oscillator' checkbox to settings.
 
