--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -11,6 +11,8 @@ Sort out bank properly.
 
 Sort out cli part effect controls. Also sys/ins updates wrong.
 
+Set up proper resonance limits.
+
 Find out why reporting errors in 'Bank' is very slow.
 
 Realtime subnote
