Deactivate resonance GUI if not enabled All mutex code now commented out

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.9 M
 
+2018-10-17 Will
+* Deactivate resonance GUI if not enabled.
+* All mutex code now commented out.
+  Will eventually be removed if no problems.
+
 2018-10-15 Will
 * Minor code cleanups.
 * Doc updates.
