Added Lorenzo's synth_prelude to examples Possibly cured occasional GUI corruption

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.9 M
 
+2018-10-20 Will
+* Added Lorenzo's synth_prelude to examples.
+* Possibly cured occasional GUI corruption.
+
 2018-10-19 Will
 * Most #defines in globals.h changed to const.
 * BugFix: CLI not reading resonance points.
