--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.9 M
 
+2018-10-24 Will
+* Deactivate PadSynth amp group if Multiplier off.
+
 2018-10-23 Will
 * Started defining CLI PadSynth Controls.
 
