--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.9 M
 
+2018-11-17 Will
+* Changed CLI formant filter formant number for clarity.
+* Improved CLI filter help list.
+* Added CLI display of filter's current vowel/formant.
+
 2018-11-11 Will
 * Improved CLI kit mode controls.
 * Added CLI min to last note and max to last note.
