--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.9 M
 
+2018-11-25 Will
+* Moved all static CmdInterface strings from .cpp to .h
+* Corrected some CLI EQ text.
+
 2018-11-24 Will
 * BugFix: Limits tests not finding dynfilter-filter.
 * Completed CLI access to dynfilter. Phew!
