Some corrections and improvements to new prng

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.9 M
 
+2018-11-29 Will
+* Some corrections and improvements to new prng.
+
 2018-11-28 Will
 * Inplemented a new prng with no external libraries
   based on "A small noncryptographic PRNG"
