--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
-yoshimi 1.5.10.1 rc1
+yoshimi 1.5.10.1
+
+2019-1-13 Will.
+* Confirmed previous fix and set release as 1.5.10.1
 
 2019-1-12 Rob, Will, Hermann
 * BugFix: Changes to CMakeLists.txt failed fedora build.
