Yoshimi hands over startup if there's a running instance

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.5.10 M
 
 2019-1-20 Will
 * Sending SIGUSR2 to running Yoshimi starts new instance.
+* Yoshimi hands over startup if there's a running instance.
 
 2019-1-13 Will
 * Confirmed previous fix and set release as 1.5.10.1
